--- a/_posts/thesis_chapters/2025-6-5-Design_v13.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v13.md
@@ -119,16 +119,13 @@ The significance of activity at this scope underpins my proposal of GDPs as a ge
 <!-- Integrate LATER
 Using the terminology of Leontiev [-@leontiev_activity_2009], Toby can be seen undertaking chains of processes in a fluid way, indicating that these actions had become operations. The following sections extend this analysis by exploring three core areas of contradiction that shaped the evolving learning design. -->
 
-
-
 ## Narrative exploration of key areas of contradictions emerging in the game-making learning design (in P1 /P2?)
 
 In line with the theoretical framing established in Chapter 3, contradictions are understood as historically and structurally embedded misalignments between elements of an activity system, often made visible during periods of change or innovation . Following Kuutti [-@kuutti_activity_1995] and Engeström [-@engestrom_activity_1999], tensions, barriers, and disruptions in practice are treated as surface-level manifestations of deeper contradictions within and between activity systems [@engestrom_discursive_2011]. These may take the form of technical difficulties, motivational conflicts, or mismatches between participant expectations and the tools or rules shaping the activity. The following sections of this chapter examine three key areas of contradiction within this 3GAT framework. As the phases of design are referred to frequently Figure 5.x is included as a reminder.
 
 ![](./Pictures/phases_diagram_chevrons_3.png){width=98%}
 
-Figure. 5.x Reminder  of delivery phases and development periods
-
+Figure. 5.x Reminder of delivery phases and development periods
 
 The first section addresses tensions arising from the introduction and evolution of technical tools in the learning design, particularly the shift in software practices between P1 and P2. The second focuses on contradictions related to navigation and supporting documentation during P2. The third explores cultural and identity-based tensions in coding participation, an area highlighted in earlier chapters as a persistent barrier to inclusion.
 
@@ -153,15 +150,11 @@ The code playground tool proved initially productive in scaffolding the beginnin
 
 The decision to use a code playground was guided by a need to provide assistance for participants given my motivation to support authentic engagement with real code [@chesterman_webmaking_2015]. While the affordances of the code playground ameliorated some of the barriers associated with text coding [^bb], challenges remained for P1 participants.
 
-
-
-When participants began engaging with code, several tensions quickly surfaced. The gap between participants’ desired game features and their inability to implement them in code led groups to specialise. Some participants with greater confidence or experience took on coding tasks, while others worked on graphical game assets (both digital and physical), narrative planning, or sound elements [^sp]. At this point, my ability to support participants undertaking coding activities became a limiting factor. Given the limitations of the structural starter code, learners frequently needed one-to-one help to make even minor edits. Whole-group demonstrations were largely ineffective: attention drifted, and groups progressed at different speeds and needed different support at different stages.  Without in-tool help or the supporting affordances provided by block coding environments participants had no  supports to draw upon. They relied on me as the primary source of information, further exacerbating the facilitator workload. As a result, support bottlenecks emerged, and some participants became stalled early in their projects. My journal notes describe these sessions as increasingly difficult to manage.
+When participants began engaging with code, several tensions quickly surfaced. The gap between participants’ desired game features and their inability to implement them in code led groups to specialise. Some participants with greater confidence or experience took on coding tasks, while others worked on graphical game assets (both digital and physical), narrative planning, or sound elements [^sp]. At this point, my ability to support participants undertaking coding activities became a limiting factor. Given the limitations of the structural starter code, learners frequently needed one-to-one help to make even minor additions to their game. Whole-group demonstrations were largely ineffective: attention drifted, and groups progressed at different speeds and needed different support at different stages. Without in-tool help or the supporting affordances provided by block coding environments participants had no  supports to draw upon. They relied on me as the primary source of information, further exacerbating the facilitator workload. As a result, support bottlenecks emerged, and some participants became stalled early in their projects. My journal notes describe these sessions as increasingly difficult to manage.
 
 #### Surfaced tensions and framed contradiction
 
-
-The use of professional text-code language and framework, driven by  rather than a block coding approach created additional tensions. While simplified, the structure of the starting template was still relatively complex at first glance and offered no easy way into experimentation as advocated by a tinkering or bricolage approach [^br]. Many learners had ambitious ideas for their projects including that were beyond realistic scope of the novice programme [^ab]. Regarding peer learning, while some learners became aware of each other's programming work, it was difficult to adapt the bespoke code additions from one project to another.
-
+The use of professional text-code language and framework, rather than a block coding approach was a contributing factor to emerging tensions. While simplified, the structure of the starting template  still relatively complex for novices and offered no easy way into experimentation as advocated by a tinkering or bricolage approach [^br]. Many learners had ambitious ideas for their projects including that were either beyond the scope of the code framework or not realistic given the novice coding level of participants [^ab]. Regarding peer learning, while some learners became aware of each other's programming work, it was difficult to adapt the bespoke code additions from one project to another.
 
 ![Figure 5.x: Representation of emerging areas of contradictions in mid-P1 game making process](./Pictures/At_tension_1_v3.png){width=75%}
 
@@ -175,24 +168,17 @@ In addition, these tensions outlined above shaped a series of design adaptations
 
 <!-- THE INITIAL EXPERIENCE. -->
 
-The process involve close attention to the initial participant experience of the game code. This game template was introduced by a facilitators prompted learners to play a _broken_ game in a web page. They were asked to work out in what way the game was broken and then invited to look at the code to try to _fix_ the game (e.g to make changes to progress). Figure 5.x below shows a white square as a player, red squares are hazards to be avoided, and yellow squares are rewards which must be collected to progress to the next level. A white line is shown indicating how high the player character can jump, significantly not high enough to jump onto the blue platforms and finish the level.
+The process involved close attention to the initial participant experience of the game code. This game template was introduced by a facilitators prompted learners to play a _broken_ game in a web page. They were asked to work out in what way the game was broken and then invited to look at the code to try to _fix_ the game (e.g to make changes to progress). Participants would try to jump up to the platforms in the game but find that they could not jump high enough ot progress. Figure 5.x below shows a white square as a player, red squares are hazards to be avoided, and yellow squares are rewards which must be collected to progress to the next level. A white line is shows indicating how high the player character can jump.
 
 ![Figure 5.x Simple game template - with limitation of initial jump height shown](./Pictures/simple_codeplayground_jump.png){width=95%}
-
-
-
-
-
 
 <!-- THIS IS ALSO COVERED IN C3? -->
 
 ### Technical description of the core toolset used for P2 and P3
 
-The following section outlines summary a technical description of the toolset that emerged from the tensions and contradictions of Phase 1 and which was implemented in Phase 2.
+The following section outlines summary a technical description of the toolset that emerged from the tensions and contradictions of Phase 1 and which was implemented in Phase 2. While P1 had been exploratory and had use a large set of tools, In P2 I reduced the number of tools suggested significantly [^tt].
 
-While P1 had been exploratory and had use a large set of tools, In P2 I reduced the number of tools suggested significantly.
-
-An Appendix with a greater level of detail allow for replicability by other practitioners. I offer this overview to allow the reader a greater situated understanding of the activities being carried out.
+An Appendix with a greater level of detail allow this design approach to be replicated by other practitioners. I offer this overview to allow the reader a greater situated understanding of the activities being carried out [^str].
 
 <!-- ADD - Signposting sentence for the following sections  at the start
 
@@ -203,7 +189,6 @@ THAT COULD BE A TABLE (OR DEVELOPED) for Chapter -->
 **Simplified file structure:** The overall file structure was simplified so that participants only needed to alter the game.js file. Within that file, an older version of Phaser.js was used allowing simplified syntax in object and functions construction [^this].
 
 **Variables at the start of the document:** Small changes in variables at the start of the JavaScript game file created rapid feedback responses and large changes in the game. The starter game templates included the following elements: editable values and visible parameters for player movement, enemy speed, and image and sound assets.
-
 
 **Blocks graphics and use of Piskel:** Generic colour blocks in the starting template and encourage the process of adding designs created by participants graphics created in the Piskel tool [^piskel]. The template was altered to facilitate importation of blocks of 32x32 pixels, the default project size of Piskel aiding migration. The use of this tool external to the code playground led to benefits in developing key digital literacy skills as participants needed to migrating assets from Piskel into their games via downloading to their computer and reuploading.
 
@@ -228,7 +213,6 @@ Names in Appendix
  -->
 
 ##### Brief Analysis
-
 
 COMPRESS AND SIGNPOST THIS NEXT BIT -
 This chapter discusses this design in relation to existing research on learning to programme through the use of supporting code templates.
@@ -271,10 +255,9 @@ Firstly, recapping from C1,
 
 In terms of the creative process, the exploratory nature of P1 led to divergent creative pathways, but at a cost of a sense of an overall coherence and shared understanding of the process. In response I reflected on the tension between learner agency, especially the role of creative autonomy, and the need for shared reference points that could support progress without constant facilitator intervention.
 
-The changes in software tools above had been one response. In P2, the introduction of a game template approach had the unintended consequence of reducing the average size of working groups thus increasing individual coding project  projects, which in turn increased demand on my time as a technical troubleshooter. While the in-tool scaffolding provided by the code template accelerated production for most learners [@laurillard2020significance], participants still required support when adding new code structures, particularly during the _Create_ stage of UMC.  My direct input was often needed at this stage, thus delays and participant frustration due to the limited time I could offer each group.
+The changes in software tools above had been one response. TO WHAT?  In P2, the introduction of a game template approach had the unintended consequence of reducing the average size of working groups thus increasing individual coding project  projects, which in turn increased demand on my time as a technical troubleshooter. While the in-tool scaffolding provided by the code template accelerated production for  learners significantly [@laurillard2020significance], participants still required support when adding new code structures, particularly during the _Create_ stage of UMC.  My direct input was often needed at this stage, thus delays and participant frustration due to the limited time I could offer each group.
 
-
-Early in P2 resources to support implementation were still often driven by specific participants request, however due to a higher similarity in underlying code structure, they were now suitable reuse. Thus, in addition to direct coding help, a small library of short stand-alone instruction documents began to accumulate.
+Early in P2 resources to support implementation were still often driven by specific participants request, however due to a higher similarity in underlying code structure, they  now became suitable for reuse. As such, in addition to direct coding help, a small library of short stand-alone instruction documents began to accumulate.
 
 Groups expanded their activity by creating wish lists of game features, which acted as mediating tools to coordinate between different team members and to request facilitator support to implement them via code structures.
 
@@ -307,16 +290,17 @@ Recalling my organisational crisis in P1 outlined in the section above, in respo
 
 Early in P2 I returned to this concept to begin  design and implementation of supporting resources oriented around a list of game features which users could choose from allowing them take on features in the order that they chose.
 
-Resources evolved rapidly pace at the start of P2, resulting created three main sources of documentation: quick start cards, written instructions, and code snippets to address some of the contradictions in the learning design outlined above.
+Resources evolved rapidly pace at the start of P2, resulting created three main sources of documentation: quick start cards, written instructions, and code snippets to address some of the contradictions in the learning design outlined above. I now describe the process of creating these varied supporting documentation and the purposes they served.
 
 ##### Quick Start Cards
 
-_Quick start cards_ (see Figure 5.cards below) developed during P2, were A5 sized printouts highlighting the key affordances of the template involving: game mechanics such as movement, jumping, level design, and the final challenge of swapping out the look of one or more characters by designing pixel art and replacing the line of code that adds the asset to the game. These printed resources highlighted key lines of code and demonstrated how they could be altered to impact game behaviour [^8].
-
+The resource I call _quick start cards_ was initially developed to support one-off sessions to allow rapid experimentation with the starter games [^qs]. They were designed to let participants choose challenged based on area of interest and difficulty. _Quick start cards_ (see Figure 5.cards below) were A5 sized printouts highlighting the key affordances of the template involving: game mechanics such as movement, jumping, level design, and the final challenge of swapping out the look of one or more characters by designing pixel art and replacing the line of code that adds the asset to the game. These printed resources highlighted key lines of code and demonstrated how they could be altered to impact game behaviour [^8].
 
 ![Figure 5.cards - Example of a Quick start card](./Pictures/velocity_jscard.png){width=95%}
 
-The cards supported participants' initial interaction with the code in a way that further developed the use and modify stages of the UMC framework [@franklin_analysis_2020]. They allowed  participants to get started with the starting template game with less in person support from facilitators to the strongly scaffolded interaction with the code and the relatively minimal changes needed to the code. The result of quick start cards in one-off sessions allowed very rapid creation of games with participants able to choose a level of difficulty and an area of interest. Thus in early stages, this process addressed the tension of providing documentation to support users in completing coding tasks while also facilitating choice over learner pathways. This style of intervention aligns with the concept of just-in-time learning approaches within project-based learning [@riel1998education], where access to supporting documentation is provided based on learner need.
+The cards supported participants' initial interaction with the code in a way that further developed the use and modify stages of the UMC framework [@franklin_analysis_2020]. They allowed  participants to get started with the starting template game with less in person support from facilitators to the strongly scaffolded interaction with the code and the relatively minimal changes needed to the code.
+
+Thus in early stages, this process addressed the tension of providing documentation to support users in completing coding tasks while also facilitating choice over learner pathways.
 
 <!-- Also aligning with low floors principle.
 VERY LIMITED ANALYSIS HERE - SIGNPOST LATER EXPLORATION?
@@ -324,10 +308,12 @@ VERY LIMITED ANALYSIS HERE - SIGNPOST LATER EXPLORATION?
 
 ##### Structuring instructional tutorial resources and code snippets
 
-The process of creating supporting documentation underwent several iterations which build on top of each other and served varied purposes.
+MAKER CLEARER
 
-In P1, I had encouraged participants to use code snippets from the Phaser documentation website. While the use of code examples or *snippets* is a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017]. Indeed  difficulties experienced by participants in P1 understanding and applying these abstracted examples prompted me to create more tailored resources. To do this I created stand-alone code project that illustrated requested game features as gameplay design patterns, such as *jumping on an enemy to zap it* and *making a moving enemy*  demonstrated a code feature or principle through a playable game project based on the core game template, hosted in an online code playground. This allowed participants to copy and paste the relevant code sections needed into their project.  I developed this approach further in a way which reduced dependence on my time as a facilitator. I wrote supporting documentation in a step by step format for each code example. In the early stages of P2, learners accessed these document through  a Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa. To help learners situate the code within the correct structure, all projects used the core game template and included only the new code required for each feature.
 
+In P1, I had encouraged participants to use code snippets from the Phaser documentation website. While the use of code examples or *snippets* is a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017]. Indeed  difficulties experienced by participants in P1 understanding and applying these abstracted examples prompted me to create more tailored resources. To do this I created stand-alone code project that illustrated requested game features as gameplay design patterns, such as *jumping on an enemy to zap it* and *making a moving enemy*  demonstrated a code feature or principle through a playable game project based on the core game template, hosted in an online code playground. This allowed participants to copy and paste the relevant code sections needed into their project.  I developed this approach further in a way which reduced dependence on my time as a facilitator. I wrote supporting documentation in a step by step format for each code example.
+
+In the early stages of P2, learners accessed these document through  a Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa. To help learners situate the code within the correct structure, all projects used the core game template and included only the new code required for each feature.
 
 To meet participants' requests for foundational coding knowledge, I created step-by-step chapter resources guiding users to code a core game template structure from first principles [^9]. While this linear format did not fully align with my choice-driven approach, I envisioned it as supplementary reinforcement for learning outside of sessions, which indeed some participants did take up [^10]. Writing these chapters revealed a technique that helped balance structured guidance with choice-driven learning.
 
@@ -337,7 +323,8 @@ I also experimented with ways to present these feature choices in an accessible,
 
 Figure 5.patterns : a screenshot of the hub of GDPs pointing to code snippets and instructional chapters
 
-Chapter 2 reviewed research on using collections of gameplay design patterns to support learning in game design [@holopainen2007teaching; @holopainen2011foundations; @eriksson_using_2019; @bjork_patterns_2005]. Thematic organisation of these patterns shows potential to foster a shared understanding of game-making concepts within a coding community [@holopainen2011foundations]. For the documentation hub described above, I grouped game design patterns into categories based on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003; @olsson2014conceptual], as well as participants’ evolving requests for game features. The final categorisation used in P4 is shown below in Table 5.x.
+These patterns were themed in a way which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2 [^11]. The final categorisation used in P4 is shown below in Table 5.x.
+
 
 | **Game Mechanics**| **Game Polish** | **Game Space** | **Challenge Systems**|         
 |--------|------------|--------------|----------|
@@ -351,14 +338,17 @@ Chapter 2 reviewed research on using collections of gameplay design patterns to 
 
 Table 5.x Categorisation of game design patterns used in P4.
 
-These elements were themed in a way which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2 [^11].  
-
 
 <!-- NOTE - DEVELOP THIS A BIT AS IT IS EXPLORED IN CHAPTER 6. -->
 
 #### Brief analysis
 
-The structuring of the collection of code examples, as outlined in were developed in response to requests for new features from participants, aligning with a shared motivation to encourage diverse learner pathways. Video data collected documents the creation of games with diverse and complex styles and themes [^11a]. These issues are discussed in more detail in relation to the development of participant agency in Chapter 7. Discussion on how the development of these supporting resources interacted with the core template contributes to research on Microworld environments and the UMC framework is continued in the final dicussion section of this chapter.
+
+Chapter 2 reviewed research on using collections of gameplay design patterns to support learning in game design [@holopainen2007teaching; @holopainen2011foundations; @eriksson_using_2019; @bjork_patterns_2005]. Thematic organisation of these patterns shows potential to foster a shared understanding of game-making concepts within a coding community [@holopainen2011foundations]. For the documentation hub described above, I grouped game design patterns into categories based on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003; @olsson2014conceptual], as well as participants’ evolving requests for game features.
+
+The structuring of the collection of code examples, as outlined in were developed in response to requests for new features from participants, aligning with a shared motivation to encourage diverse learner pathways. This style of intervention aligns with the concept of just-in-time learning approaches within project-based learning [@riel1998education], where access to supporting documentation is provided based on learner need.
+
+Video data collected documents the creation of games with diverse and complex styles and themes [^11a]. These issues are discussed in more detail in relation to the development of participant agency in Chapter 7. Discussion on how the development of these supporting resources interacted with the core template contributes to research on Microworld environments and the UMC framework is continued in the final discussion section of this chapter.
 
 <!-- While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1),
 the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features.  -->
@@ -608,6 +598,9 @@ Gilbert is the worsted name.
 
 [^ab]: See appendix bee for an example.
 
+[^tt]: Tools used in P1 included several audio and music making tools, Scratch as a graphical editor, and varied non software tools. See Appendix D.1.?  
+
+[^str]: The structural decisions to support the use of a code playground are expanded with greater technical detail in Appendix D.1.?
 
 [^this]: While a technical consideration beyond the scope of a non-technical reader this issue is significant for the participants experience. See Appendix D.1 game state for a technical exploration.
 
@@ -625,7 +618,9 @@ Gilbert is the worsted name.
 
 [^7]: This email included in Appendix.email is pivotal to my understanding of the limits of my role as facilitator of an open process and the need to impose limitation. At the end of the email I say "I guess the challenge is to do this so that it’s a map, with different learning directions and possibilities, but that we are all still on the same map in our groups."
 
-[^8]: A version of the quick start cards and a fuller description of their development by trainee teacher student helpers is available online and as part of Appendix.tech.
+[^qs]: The time limitations one-off events at Mozilla conference (for technology educators), Feral Vector (for grass-roots game developers), and Manchester Libraries (local families) and for trainee computing teachers  helped me distil the essence of the affordances into an accelerated process of getting started with the design process.
+
+[^8]: A version of the quick start cards is available as part of Appendix.tech.
 
 [^9]: See opening chapters of https://3m.flossmanuals.net/
 
